# BigInt

./: BigInt.h  CMakeLists.txt
Catch2/CMake/: CatchConfigOptions.cmake  CatchMiscFunctions.cmake  FindGcov.cmake  FindLcov.cmake  Findcodecov.cmake
Catch2/extras/: Catch.cmake  CatchAddTests.cmake  CatchShardTests.cmake  CatchShardTestsImpl.cmake  ParseAndAddCatchTests.cmake
Test/: BasicFunc.cpp  CMakeLists.txt  Calculate.cpp
